--- a/index.html
+++ b/index.html
@@ -62,19 +62,28 @@
       margin: 16px 0;
       font-size: 1.3em;
     }
-    .guide-card {
+    .guide-section {
       display: flex;
       align-items: center;
       background: white;
       border-radius: 12px;
-      padding: 20px;
+      padding: 30px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      margin-bottom: 30px;
+      margin-bottom: 50px;
     }
-    .guide-card img {
-      width: 120px;
-      margin-right: 20px;
-      border-radius: 8px;
+    .guide-section img {
+      width: 180px;
+      border-radius: 12px;
+      margin-right: 30px;
+    }
+    .guide-content h3 {
+      font-size: 1.2em;
+      color: #0056b3;
+      margin-bottom: 8px;
+    }
+    .guide-content h2 {
+      font-size: 1.8em;
+      margin-bottom: 12px;
     }
     .international-section {
       background: white;
@@ -86,9 +95,13 @@
       box-shadow: 0 4px 16px rgba(0,0,0,0.08);
     }
     .international-section h3 {
+      font-size: 1.2em;
       color: #0056b3;
-      margin-bottom: 16px;
+      margin-bottom: 8px;
+    }
+    .international-section h2 {
       font-size: 1.8em;
+      margin-bottom: 16px;
     }
     .why-us {
       text-align: center;
@@ -149,18 +162,18 @@
       </div>
     </div>
 
-    <div class="guide-card">
+    <div class="guide-section">
       <img src="https://hospitalprivado.com.ar/frontend/images/home-GP-01.png" alt="Guía del Paciente y la Familia">
-      <div>
+      <div class="guide-content">
         <h3>PACIENTES</h3>
-        <h3>Guía del <strong>Paciente y la familia</strong></h3>
+        <h2>Guía del <strong>Paciente y la familia</strong></h2>
         <p>Conocé toda la información necesaria para garantizar tu bienestar durante la estadía en nuestro Hospital.</p>
       </div>
     </div>
 
     <div class="international-section">
       <h3>PACIENTES INTERNACIONALES</h3>
-      <h3>Vengas de donde vengas, <strong>te sientes como en casa</strong></h3>
+      <h2>Vengas de donde vengas, <strong>te sientes como en casa</strong></h2>
       <p>Desde el corazón de Argentina, estamos presentes en todos los países de la región gracias a acuerdos firmados con las principales aseguradoras internacionales de salud.</p>
       <a href="#" class="btn">Más información</a>
     </div>
