--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <title>Portal Hospitalario – Hospital Central</title>
+    <link rel="icon" href="/hospital-icon.png" type="image/png" />
+
+    <!-- SEO -->
+    <meta name="description" content="Portal hospitalario para pacientes y profesionales. Turnos online, historial clínico y más." />
+    <meta name="keywords" content="hospital, salud, turnos, pacientes, médicos, clínica" />
+    <meta name="author" content="David Díaz" />
+    <meta name="theme-color" content="#0d6efd" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Portal Hospitalario" />
+    <meta property="og:description" content="Accedé a tus turnos, historia clínica y servicios médicos en línea." />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:url" content="https://dsd228.github.io/hospital-portal/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
